<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <ImageView
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:id="@+id/imageView2"
        android:src="@mipmap/personicon"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:text="@string/postName_label"
        style="?android:listSeparatorTextViewStyle"

        android:textAllCaps="false"
        android:id="@+id/munch_PostName"
        android:textStyle="bold"
        android:textSize="30dp"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />


    <TextView
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:text="@string/fullName_label"
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/textView5"
        android:layout_below="@+id/munch_postName"
        android:layout_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/munch_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/name_label"
         />

    <TextView
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:text="@string/Time_label"
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/textView4"
         />

    <TextView
        android:id="@+id/munch_startTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="start time"
         />

    <TextView
        android:id="@+id/munch_endTime"
        android:layout_width="200dp"
        android:layout_marginLeft="16dp"
        android:layout_height="wrap_content"
        android:hint="end time"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/textView2"
         />
    <TextView
        android:id="@+id/munch_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="location"
        android:layout_marginLeft="16dp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        style="?android:listSeparatorTextViewStyle"

        android:id="@+id/textView" />

    <TextView
        android:id="@+id/munch_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:hint="@string/description"
         />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_solved_label"
         />
<!--
    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/myColor"
        /> -->


</LinearLayout>